fix styling issues on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -18,12 +18,6 @@ body {
   -webkit-overflow-scrolling: touch;
 }
 
-#root {
-  height: 100vh;
-  overflow-y: auto;
-  -webkit-overflow-scrolling: touch;
-}
-
 .dynamic-background {
   background-color: #2b3122 !important;
   width: 100vw;
